# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
# Charm is not packed as a standard Python package; this information is not used
name = "charm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.12"
ops = "~2.15.0"
pymongo = "^4.7.3"
overrides = "^7.7.0"
tenacity = "^9.0.0"
pyyaml = "^6.0.1"
cffi = "^1.16.0"
jinja2= "^3.1.3"
pyOpenSSL = "^24.2.1"
pure-sasl = ">=0.6.2"
poetry-core= "^1.9.0"
rpds-py = "0.18.0"


[tool.poetry.group.charm-libs.dependencies]
ops = "~2.15.0"
pydantic ="^1.10.7"
cryptography = "^42.0.5"
jsonschema = "^4.22.0"
cosl = "^ 0.0.16"
pyOpenSSL = "^24.2.1"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.1.6"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.6"
codespell = "^2.2.6"

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.5.0"}
pytest = "^8.1.1"
parameterized = "^0.9.0"
pymongo = "^4.7.3"

[tool.poetry.group.integration.dependencies]
allure-pytest = "^2.13.5"
ops = "~2.15.0"
tenacity = "^9.0.0"
pymongo = "^4.7.3"
juju = "^3.5.0"
pytest = "^8.1.1"
pytest-asyncio ="^0.21.1"
pytest-operator = "^0.34.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
allure-pytest-collection-report = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/allure_pytest_collection_report"}

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
