# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
# Charm is not packed as a standard Python package; this information is not used
name = "charm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.12"
ops = "~2.17.0"
pymongo = "^4.10.1"
overrides = "^7.7.0"
tenacity = "^8.5.0"
pyyaml = "^6.0.2"
cffi = "^1.17.1"
jinja2= "^3.1.4"
pyOpenSSL = "^24.2.1"
pure-sasl = ">=0.6.2"
poetry-core= "^1.9.1"
rpds-py = "0.20.0"


[tool.poetry.group.charm-libs.dependencies]
ops = "~2.15.0"
pydantic ="^1.10.7"
cryptography = "^42.0.5"
jsonschema = "^4.22.0"
cosl = "^ 0.0.16"
pyOpenSSL = "^24.2.1"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.7.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.7.0"
codespell = "^2.3.0"

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.6.4"}
pytest = "^8.3.3"
parameterized = "^0.9.0"
pymongo = "^4.10.1"

[tool.poetry.group.integration.dependencies]
allure-pytest = "^2.13.5"
ops = "~2.17.0"
tenacity = "^8.5.0"
pymongo = "^4.10.1"
juju = "^3.5.0"
pytest = "^8.3.3"
pytest-asyncio ="^0.24.0"
pytest-operator = "^0.38.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
allure-pytest-collection-report = {git = "https://github.com/canonical/data-platform-workflows", tag = "v21.0.0", subdirectory = "python/pytest_plugins/allure_pytest_collection_report"}

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
